src/test/resources/Parser/SyntaxErrors/CyclicInclude.front
include CyclicInclude2.front;